# skeleton

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/api/: __init__.py
tests/: test_app.py
