[project]
name = "skaleton"
description = "Flask API skeleton for new projects"
version = '1.0'
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    'flask == 3.0.3',
    'flask-restx == 1.3.0',
    'flask-httpauth == 4.8.0',
]

[project.optional-dependencies]
uwsgi = [
    'uwsgi == 2.0.28'
]
tests = [
    'flake8-pyproject >=1.2.3',
    'pytest >= 7.0.1',
    'pytest-dotenv == 0.5.2',
    'pytest-env >= 0.6.2',
    'pytest-cov >= 4.0.0',
    'black >= 23.9.1'
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.flake8]
max-line-length = 119
count = 1
statistics = 1
max-complexity = 30

[tool.black]
line-length = 119

[tool.coverage.html]
directory = "coverage"